--- a/views/pulsar/layouts/base.html.twig
+++ b/views/pulsar/layouts/base.html.twig
@@ -77,7 +77,7 @@
                     {% block user_menu %}
                     {{
                         html.button_dropdown({
-                            'class': 'btn--outline btn--inverse',
+                            'class': 'btn--outline',
                             'label': html.icon('building-o') ~ ' <span class="toolbar-action__text">Pulsar City Council</span>',
                             'items': [
                                 html.link({
@@ -93,7 +93,7 @@
                     }}
                     {{
                         html.button_dropdown({
-                            'class': 'btn--outline btn--inverse',
+                            'class': 'btn--outline',
                             'label': html.icon('user-o') ~ ' <span class="toolbar-action__text">Paul Stanton</span> (23)',
                             'items': [
                                 html.link({
