--- a/views/lexicon/includes/notifications.html.twig
+++ b/views/lexicon/includes/notifications.html.twig
@@ -1,7 +1,7 @@
     <div class="btn__group dropdown toolbar-action toolbar-action--icon notifications">
         {{
             html.button({
-                'class': 'btn--outline btn--inverse notifications-toggle has-new is-active',
+                'class': 'btn--outline notifications-toggle has-new is-active',
                 'label': html.icon('bell-o', { 'label': 'Show notifications'}) ~ ' <span class="caret"></span>',
                 'data-toggle': 'dropdown',
                 'aria-expanded': false
