--- a/views/pulsar/v2/helpers/nav.html.twig
+++ b/views/pulsar/v2/helpers/nav.html.twig
@@ -176,7 +176,7 @@
     <div class="btn__group dropdown toolbar-action--icon">
         {{
             html.button({
-                'class': 'dropdown-toggle btn--outline btn--inverse',
+                'class': 'dropdown-toggle btn--outline',
                 'label': html.icon('book', { 'label': options.label|default('help') }) ~ ' <span class="caret"></span>',
                 'data-toggle': 'dropdown'
             })
