--- a/stylesheets/_component.actionsbar.scss
+++ b/stylesheets/_component.actionsbar.scss
@@ -52,13 +52,10 @@
         }
 
         // Undo button group styling when buttons collapse into full width mode
-        > .btn:not(:first-of-type):not(.btn--naked):not(.remove-button):not(.edit-button):not(.remove-button),
-        > .btn:not(.btn--naked):not(.remove-button):not(.edit-button):not(.remove-button):first-of-type {
+        > .btn {
             @include respond-max($screen-smaller) {
-                border-left: 0;
                 border-radius: $border-radius;
                 border-right: 0;
-                margin-left: 0;
             }
         }
 
