--- a/stylesheets/_component.button-groups.scss
+++ b/stylesheets/_component.button-groups.scss
@@ -5,21 +5,26 @@
         border-right: 1px solid rgba(0, 0, 0, .1);
         border-radius: 0;
 
-        &:first-child {
+        &:first-of-type {
             border-top-left-radius: $border-radius;
             border-bottom-left-radius: $border-radius;
         }
 
-        &:last-child {
+        &:last-of-type {
             border-top-right-radius: $border-radius;
             border-bottom-right-radius: $border-radius;
-            border-right: 0;
+            border-right-width: 0;
+        }
+
+        // Restore expected borders for solo outline buttons only
+        &.btn--outline:only-of-type {
+            border-right-width: 1px;
         }
     }
+}
 
-    &.dropdown .btn,
-    &.dropup .btn {
-        border-right: 0;
-        border-radius: $border-radius;
-    }
+.dropdown .btn,
+.dropup .btn {
+    border-right-width: 0;
+    border-radius: $border-radius;
 }
