--- a/views/lexicon/patterns/common-list/table.html.twig
+++ b/views/lexicon/patterns/common-list/table.html.twig
@@ -73,6 +73,15 @@
 {%- endblock -%}
 
 {%- block actions_right -%}
+{{
+    html.button_group({
+        'buttons': [
+            html.button({ label: 'foo' }),
+            html.button({ label: 'bar' }),
+            html.button({ label: 'baz' })
+        ]
+    })
+}}
     {{
         html.button({
             'label': 'Create Thing',
