Stop help styles overriding button group text colour

--- a/stylesheets/_mixin.mixins-to-organise.scss
+++ b/stylesheets/_mixin.mixins-to-organise.scss
@@ -109,7 +109,7 @@
 
     // Color the label and help text
     .help-block,
-    .control__label {
+    > .control__label {
         color: $text-color;
     }
 
