Move button variables

--- a/stylesheets/_config.variables.scss
+++ b/stylesheets/_config.variables.scss
@@ -82,6 +82,12 @@ $screen-large:                        1200px !default;
 $screen-large-desktop:                $screen-large !default;
 
 // -----------------------------------------------------------------------------
+//  Buttons
+// -----------------------------------------------------------------------------
+
+$btn-border-radius: 0; // Just experimenting with 0 border for a while...
+
+// -----------------------------------------------------------------------------
 //  Borders
 // -----------------------------------------------------------------------------
 
