--- a/stylesheets/_component.buttons.scss
+++ b/stylesheets/_component.buttons.scss
@@ -1,14 +1,3 @@
-// Variables
-$btn-border-radius: 0; // Just experimenting with 0 border for a while...
-
-$btn-padding-x: 10px;
-$btn-padding-top: 10px;
-$btn-padding-bottom: 9px;
-
-$btn-small-padding-x:       $btn-padding-x / 2.5;
-$btn-small-padding-top:     $btn-padding-top / 2.5;
-$btn-small-padding-bottom:  $btn-padding-bottom / 2.5;
-
 // Variant constructor
 @mixin button-variant($state) {
     background-color: color($state);
@@ -24,6 +13,10 @@ $btn-small-padding-bottom:  $btn-padding-bottom / 2.5;
     &.is-disabled {
         color: color($state, alt);
     }
+
+    &.btn--naked {
+        color: color($state, dark);
+    }
 }
 
 // Button Constructor
@@ -33,7 +26,7 @@ $btn-small-padding-bottom:  $btn-padding-bottom / 2.5;
     display: inline-block;
     font-family: $font-family-base;
     line-height: normal;
-    padding: $btn-padding-top $btn-padding-x $btn-padding-bottom;
+    padding: $padding-large-vertical $padding-large-vertical ($padding-large-vertical - 1);
     position: relative;
     text-align: center;
     text-decoration: none;
@@ -46,7 +39,6 @@ $btn-small-padding-bottom:  $btn-padding-bottom / 2.5;
 .btn {
     @extend %btn;
     border: 0;
-    border-radius: $btn-border-radius;
 
     &:focus,
     &:focus:hover {
@@ -76,10 +68,12 @@ $btn-small-padding-bottom:  $btn-padding-bottom / 2.5;
 }
 
 // Outline button styles
-.btn.btn--outline {
+.btn--outline {
     background: none;
     border: 1px solid color(base, alt);
     color: color(base, alt);
+    padding-bottom: $padding-large-vertical - 2;
+    padding-top: $padding-large-vertical - 1;
 
     // Double chain focus states to stop outline state variation overriding background colour
     &.btn--outline:focus,
@@ -99,6 +93,12 @@ $btn-small-padding-bottom:  $btn-padding-bottom / 2.5;
                     background-color: $state-color;
                     color: $state-color-alt;
                 }
+
+                &:disabled,
+                &.disabled,
+                &.is-disabled {
+                    color: color($state, dark);
+                }
             }
         }
     }
@@ -108,7 +108,6 @@ $btn-small-padding-bottom:  $btn-padding-bottom / 2.5;
 .btn--naked {
     background: none;
     border: 0;
-    color: color(text);
 
     &:hover {
         background: none;
@@ -118,5 +117,9 @@ $btn-small-padding-bottom:  $btn-padding-bottom / 2.5;
 // Small buttons
 .btn--small {
     font-size: $font-size-medium;
-    padding: $btn-small-padding-top $btn-small-padding-x $btn-small-padding-bottom;
+    padding: $padding-small-vertical $padding-small-vertical ($padding-small-vertical - 1);
+
+    &.btn--outline {
+        padding: ($padding-small-vertical - 1) $padding-small-vertical ($padding-small-vertical - 2);
+    }
 }
