--- a/stylesheets/_config.variables.scss
+++ b/stylesheets/_config.variables.scss
@@ -121,6 +121,10 @@ $padding-large-horizontal:            16px !default;
 $padding-small-vertical:              5px !default;
 $padding-small-horizontal:            10px !default;
 
+
+$padding-small-em:                    .5em !default;
+$padding-micro-em:                    .2em !default;
+
 // -----------------------------------------------------------------------------
 //  Layout
 // -----------------------------------------------------------------------------
