--- a/views/lexicon/html/labels.html.twig
+++ b/views/lexicon/html/labels.html.twig
@@ -162,69 +162,68 @@
             </tr>
 
             <tr>
-                <td>Large</td>
+                <td>Links</td>
                 <td class="centered">
                     {{
-                        html.label({
-                            'label': 'Foo',
-                            'class': 'label--large'
+                        html.link({
+                            'label': html.label({ 'label': 'Foo' }),
+                            'href': '#example'
                         })
                     }}
                 </td>
                 <td class="centered">
                     {{
-                        html.label({
-                            'label': 'Foo',
-                            'class': 'label--large label--primary'
+                        html.link({
+                            'label': html.label({ 'label': 'Foo', 'class': 'label--primary' }),
+                            'href': '#example'
                         })
                     }}
                 </td>
                 <td class="centered">
                     {{
-                        html.label({
-                            'label': 'Foo',
-                            'class': 'label--large label--success'
+                        html.link({
+                            'label': html.label({ 'label': 'Foo', 'class': 'label--success' }),
+                            'href': '#example'
                         })
                     }}
                 </td>
                 <td class="centered">
                     {{
-                        html.label({
-                            'label': 'Foo',
-                            'class': 'label--large label--warning'
+                        html.link({
+                            'label': html.label({ 'label': 'Foo', 'class': 'label--warning' }),
+                            'href': '#example'
                         })
                     }}
                 </td>
                 <td class="centered">
                     {{
-                        html.label({
-                            'label': 'Foo',
-                            'class': 'label--large label--danger'
+                        html.link({
+                            'label': html.label({ 'label': 'Foo', 'class': 'label--danger' }),
+                            'href': '#example'
                         })
                     }}
                 </td>
                 <td class="centered">
                     {{
-                        html.label({
-                            'label': 'Foo',
-                            'class': 'label--large label--inverse'
+                        html.link({
+                            'label': html.label({ 'label': 'Foo', 'class': 'label--inverse' }),
+                            'href': '#example'
                         })
                     }}
                 </td>
                 <td class="centered cell--inverse">
                     {{
-                        html.label({
-                            'label': 'Foo',
-                            'class': 'label--large label--white'
+                        html.link({
+                            'label': html.label({ 'label': 'Foo', 'class': 'label--white' }),
+                            'href': '#example'
                         })
                     }}
                 </td>
                 <td class="centered">
                     {{
-                        html.label({
-                            'label': 'Foo',
-                            'class': 'label--large',
-                            'style': 'background-color: pink; color: red;'
+                        html.link({
+                            'label': html.label({ 'label': 'Foo', 'style': 'background-color: pink; color: red;'}),
+                            'href': '#example'
                         })
                     }}
                 </td>
