Unintended change to valign

--- a/stylesheets/_component.labels.scss
+++ b/stylesheets/_component.labels.scss
@@ -17,7 +17,7 @@
     padding: 0 $padding-small-em;
     text-align: center;
     text-transform: lowercase;
-    vertical-align: middle;
+    vertical-align: baseline;
     white-space: nowrap;
 }
 
