Make buttons inside panel body vertically aligned with the body text

--- a/stylesheets/_component.panels.scss
+++ b/stylesheets/_component.panels.scss
@@ -35,6 +35,10 @@
                 margin-bottom: 0;
             }
         }
+
+        .btn {
+            vertical-align: bottom;
+        }
     }
 
     a {
