--- a/views/lexicon/tabs/panels.html.twig
+++ b/views/lexicon/tabs/panels.html.twig
@@ -82,6 +82,18 @@
 
     {{
         html.panel({
+            'title': 'Primary panel',
+            'class': 'panel--primary',
+            'body': 'What you wanna ball with the kid
+    Watch your step you might fall
+    Trying to do what I did
+    Mama-unh mama-unh mama come closer
+    In the middle of the club with the rub-a-dub, unh <a href="#" class="btn btn--outline btn--small btn--white">Call to Action</a>'
+        })
+    }}
+
+    {{
+        html.panel({
             'title': 'Default panel padded',
             'class': 'panel--padded centered',
             'body': 'What you wanna ball with the kid
