--- a/stylesheets/_component.piano.scss
+++ b/stylesheets/_component.piano.scss
@@ -105,7 +105,7 @@ $piano-bg: #fafafa;
             height: 100%;
             margin-top: 0;
             overflow-y: auto;
-            padding: $padding-base 0 40vh 0;
+            padding: $padding-base 0 40vh;
             position: absolute;
             right: 10px;
             top: 10px;
