First pass at Purple layout
Minor spacing tweaks to visually align the new grey/white blocked areas, moved h1 inside the tab content

--- a/stylesheets/_component.actionsbar.scss
+++ b/stylesheets/_component.actionsbar.scss
@@ -1,5 +1,5 @@
 .actionsbar {
-    margin-bottom: 16px;
+    margin-bottom: ($margin-large-vertical * 2);
     min-height: 32px;
 
     .float--left {
