--- a/views/lexicon/patterns/settings-panel/tab.html.twig
+++ b/views/lexicon/patterns/settings-panel/tab.html.twig
@@ -55,7 +55,7 @@
 {%- endblock -%}
 
 {% block tab_header %}
-    <p>tab header goes here</p>
+    Tab header goes here
 {% endblock tab_header %}
 
 {% block tab_settings %}
