--- a/views/pulsar/components/tab.html.twig
+++ b/views/pulsar/components/tab.html.twig
@@ -78,6 +78,7 @@
         </section>
         {% endif %}
         <div class="tab__content" id="skip-target" role="main">
+            <h1 class="main-title">{{ heading|default('MISSING HEADING') }}</h1>
             {% block tab_content %}{% endblock %}
         </div>
         {% if _hasSidebar == true %}
