--- a/stylesheets/_component.tables.scss
+++ b/stylesheets/_component.tables.scss
@@ -181,7 +181,7 @@
 // Added by javascript, allows the table to scroll horizontally at narrow
 // viewports
 .table-container {
-    margin-bottom: 24px;
+    // margin-bottom: 24px;
     overflow-x: auto;
     overflow-y: hidden;
     position: relative;
