Update nav colours in theme

--- a/stylesheets/_config.theme.scss
+++ b/stylesheets/_config.theme.scss
@@ -129,6 +129,6 @@ $state-info-border:              #2f6e8e !default;
 //  Navigation
 // -----------------------------------------------------------------------------
 
-$nav-color-light: color(jadu-blue, dark) !default;
-$nav-color-dark: darken(color(jadu-blue, dark), 5%) !default;
-$nav-color-darker: darken(color(jadu-blue, dark), 10%) !default;
+$nav-color-light:                #3e4994 !default; // must be AA 4.5:1
+$nav-color-dark:                   darken(#3e4994, 7.5%) !default;
+$nav-color-darker:                 darken(#3e4994, 10%) !default;
