--- a/docs/src/css/custom.scss
+++ b/docs/src/css/custom.scss
@@ -50,6 +50,8 @@ $fa-css-prefix: 'icon';
 
     // Base colour palette
     @import '../../../stylesheets/palette.base';
+    @import '../../../stylesheets/config.theme';
+    @import '../../../stylesheets/deprecated.styles';
 
     // Apply palette to components
     @import '../../../stylesheets/config.theme';
@@ -60,34 +62,72 @@ $fa-css-prefix: 'icon';
     @import '../../../stylesheets/structure.scaffolding';
     @import '../../../stylesheets/structure.forms';
 
+    @import '../../../stylesheets/component.actionsbar';
+    @import '../../../stylesheets/component.autosave';
     @import '../../../stylesheets/component.badges';
     @import '../../../stylesheets/component.block-list';
-    @import '../../../stylesheets/component.buttons';
-    @import '../../../stylesheets/component.button-groups';
     @import '../../../stylesheets/component.breadcrumb';
+    @import '../../../stylesheets/component.button-groups';
+    @import '../../../stylesheets/component.buttons';
+    @import '../../../stylesheets/component.calendar';
     @import '../../../stylesheets/component.cards';
-    @import '../../../stylesheets/component.datatables';
+    @import '../../../stylesheets/component.colorpicker';
+    @import '../../../stylesheets/component.close';
+    @import '../../../stylesheets/component.datepicker';
+    @import '../../../stylesheets/component.daterange';
     @import '../../../stylesheets/component.dropdowns';
-    @import '../../../stylesheets/component.dropzone';
+    @import '../../../stylesheets/component.editor';
     @import '../../../stylesheets/component.error-summary';
+    @import '../../../stylesheets/component.filterbar';
     @import '../../../stylesheets/component.flash';
+    @import '../../../stylesheets/component.footer';
     @import '../../../stylesheets/component.forms';
     @import '../../../stylesheets/component.choice';
+    @import '../../../stylesheets/component.greeter';
     @import '../../../stylesheets/component.icons';
     @import '../../../stylesheets/component.input-groups';
     @import '../../../stylesheets/component.labels';
     @import '../../../stylesheets/component.lists';
     @import '../../../stylesheets/component.loading';
+    @import '../../../stylesheets/component.login';
+    @import '../../../stylesheets/component.masterswitch';
+    @import '../../../stylesheets/component.message';
     @import '../../../stylesheets/component.metadata';
     @import '../../../stylesheets/component.modals';
+    @import '../../../stylesheets/component.navigation';
+    @import '../../../stylesheets/component.nav-list';
+    @import '../../../stylesheets/component.navbars';
+    @import '../../../stylesheets/component.notifications';
     @import '../../../stylesheets/component.pagination';
     @import '../../../stylesheets/component.panels';
+    @import '../../../stylesheets/component.piano';
+    @import '../../../stylesheets/component.popovers';
     @import '../../../stylesheets/component.progress-bars';
     @import '../../../stylesheets/component.progress-lists';
     @import '../../../stylesheets/component.range-slider';
+    @import '../../../stylesheets/component.remove-button';
+    @import '../../../stylesheets/component.ribbon';
+    @import '../../../stylesheets/component.rules';
+    @import '../../../stylesheets/component.search';
+    @import '../../../stylesheets/component.select2';
+    @import '../../../stylesheets/component.settings';
+    @import '../../../stylesheets/component.signin';
+    @import '../../../stylesheets/component.slider';
     @import '../../../stylesheets/component.status';
+    @import '../../../stylesheets/component.tab-help';
+    @import '../../../stylesheets/component.tab-panel';
     @import '../../../stylesheets/component.tables';
+    @import '../../../stylesheets/component.table-detail';
+    @import '../../../stylesheets/component.timeline';
+    @import '../../../stylesheets/component.timepicker';
+    @import '../../../stylesheets/component.datatables';
     @import '../../../stylesheets/component.toggle-switch';
+    @import '../../../stylesheets/component.toolbar';
+    @import '../../../stylesheets/component.tooltips';
+    //@import '../../../stylesheets/component.jstree';
+    @import '../../../stylesheets/component.dropzone';
+    @import '../../../stylesheets/component.repeater';
+    @import '../../../stylesheets/component.edit-button';
     
     @import '../../../stylesheets/objects/_object.media';
     // Utilities
